// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display analysis date 1`] = `
<div
  className="project-card-analysis-date note"
>
  overview.last_analysis_on_x.January 1, 2017 12:00 AM
</div>
`;

exports[`should display loading 1`] = `
<div
  className="boxed-group project-card boxed-group-loading"
  data-key="foo"
>
  <div
    className="boxed-group-header"
  >
    <h2
      className="project-card-name"
    >
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to={
          Object {
            "pathname": "/dashboard",
            "query": Object {
              "id": "foo",
            },
          }
        }
      >
        Foo
      </Link>
    </h2>
  </div>
  <div
    className="boxed-group-inner"
  />
  <div
    className="project-card-analysis-date note"
  >
    overview.last_analysis_on_x.January 1, 2017 12:00 AM
  </div>
</div>
`;

exports[`should display tags 1`] = `
<div
  className="boxed-group project-card boxed-group-loading"
  data-key="foo"
>
  <div
    className="boxed-group-header"
  >
    <h2
      className="project-card-name"
    >
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to={
          Object {
            "pathname": "/dashboard",
            "query": Object {
              "id": "foo",
            },
          }
        }
      >
        Foo
      </Link>
    </h2>
    <TagsList
      allowUpdate={false}
      customClass="spacer-left"
      tags={
        Array [
          "foo",
          "bar",
        ]
      }
    />
  </div>
  <div
    className="boxed-group-inner"
  />
  <div
    className="project-card-analysis-date note"
  >
    overview.last_analysis_on_x.January 1, 2017 12:00 AM
  </div>
</div>
`;
